# dbt-playground

./: .pdm.toml  README.md  pyproject.toml
dbt_playground/: .user.yml  dbt_project.yml  profiles.yml
scripts/: down.sh  up.sh
